RESOLVED FIXED296733
Fix Cocoa builds after 298068@main
https://bugs.webkit.org/show_bug.cgi?id=296733
Summary Fix Cocoa builds after 298068@main
Aditya Keerthi
Reported 2025-07-30 23:43:23 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2025-07-30 23:43:32 PDT
Aditya Keerthi
Comment 2 2025-07-30 23:47:00 PDT
EWS
Comment 3 2025-07-30 23:49:29 PDT
Committed 298071@main (1e99d3235d00): <https://commits.webkit.org/298071@main> Reviewed commits have been landed. Closing PR #48763 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.