Fix Cocoa builds after 298068@main https://bugs.webkit.org/show_bug.cgi?id=296733 rdar://157185563

Unreviewed build fix.

* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:
(WebCore::RenderThemeCocoa::paintMenuListButtonDecorationsForVectorBasedControls):

Canonical link: https://commits.webkit.org/298071@main